--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         util/exceptions.cpp
         conanfile.txt
         util/logger.h util/logger.cpp
+        util/gamedb.h util/gamedb.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET GummySaver APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
